--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -22,6 +22,7 @@
         android:textAppearance="?android:textAppearanceMedium" />
 
     <TextView
+        android:id="@+id/mobile_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="left"
