--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -23,10 +23,9 @@
 
     <TextView
         android:id="@+id/mobile_textview"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="left"
-        android:text="Mobile:"
+        android:text="+254721945860"
         android:layout_marginTop="3dp"
         android:textAppearance="?android:textAppearanceSmall" />
 
